# simpledb-project

./: INSTALL  README.md  build  run_server
server/: client.py  main.py  protocol.py  util.py
server/simpledb/: build  configure.ac  orphanlist.c  orphanlist.h  semaphore.c  semaphore.h  simpledb.c  simpledb.h
server/simpledb-python/: pysimpledb.c  setup.py
server/simpledb/tests/: sdb_test.c
